# stm32f_disco_blinky

./: .clang-format  .gitignore  TODO.md
archives/blinky_cmake_gnu_c/: CMakeLists.txt
archives/blinky_cmake_gnu_c/source/: main.c
archives/blinky_cmake_gnu_c/source/RTE/Device/STM32F411VETx/: startup_stm32f411xe.s
archives/blinky_cmake_gnu_c/toolchain/: stm32f4_disco.cmake
archives/blinky_cmake_gnu_c2/: CMakeLists.txt
blinky_cmake/: CMakeLists.txt  README.md  build_install.sh  env_arm_gnu.sh  gen_build_all.sh  gen_build_install.sh
blinky_cmake/blinky/: CMakeLists.txt
blinky_cmake/blinky/application/include/: error_handler.h
blinky_cmake/blinky/application/source/: error_handler.c  gpio.c  main.cpp
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Applications/Audio/Audio_playback_and_record/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Applications/EEPROM/EEPROM_Emulation/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Applications/FatFs/FatFs_USBDisk/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Demonstrations/Inc/: ffconf.h
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Demonstrations/MDK-ARM/: startup_stm32f411xe.s
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Demonstrations/STM32CubeIDE/: .cproject  .project
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/ADC/ADC_RegularConversion_DMA/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/BSP/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/BSP/Inc/: audio_play.h  audio_record.h  main.h  mems.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/BSP/MDK-ARM/: Project.build_log.htm  Project.lnp  Project.uvoptx  Project.uvprojx  Project_STM32F411E-Discovery.dep  system_stm32f4xx.d
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/BSP/STM32CubeIDE/: .cproject  .project
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/BSP/Src/: audio_play.c  audio_record.c  main.c  mems.c  stm32f4xx_it.c
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/DMA/DMA_FLASHToRAM/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/FLASH/FLASH_EraseProgram/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/GPIO/GPIO_EXTI/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/HAL/HAL_TimeBase_RTC_ALARM/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/HAL/HAL_TimeBase_RTC_WKUP/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/HAL/HAL_TimeBase_TIM/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/I2C/I2C_TwoBoards_AdvComIT/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/I2C/I2C_TwoBoards_ComDMA/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/I2C/I2C_TwoBoards_ComIT/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/I2C/I2C_TwoBoards_ComPolling/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/I2C/I2C_TwoBoards_RestartAdvComIT/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/I2C/I2C_TwoBoards_RestartComIT/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/PWR/PWR_CurrentConsumption/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/RCC/RCC_ClockConfig/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/SPI/SPI_FullDuplex_ComDMA/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/SPI/SPI_FullDuplex_ComIT/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/SPI/SPI_FullDuplex_ComPolling/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/TIM/TIM_PWMInput/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/TIM/TIM_TimeBase/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/UART/UART_TwoBoards_ComDMA/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Examples/UART/UART_TwoBoards_ComIT/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Templates/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Templates/Inc/: main.h  stm32f4xx_hal_conf.h
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Templates/STM32CubeIDE/: .cproject  .project
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Templates/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Templates_LL/: readme.txt
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Templates_LL/Inc/: main.h  stm32_assert.h  stm32f4xx_it.h
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Templates_LL/STM32CubeIDE/: .cproject  .project
blinky_cmake/blinky/lib/Projects/STM32F411E-Discovery/Templates_LL/Src/: main.c  stm32f4xx_it.c
blinky_cmake/blinky/system/include/: stm32f4xx_hal_conf.h
blinky_cmake/blinky/system/source/: stm32f4xx_it.c
blinky_cmake/cmake/: binary_size.cmake  compilation_flags.cmake  map_file.cmake
blinky_cmake/doc/: linker_map.plantuml  startup_stm32.plantuml
blinky_cmake/source/: fz_wm.l
blinky_cmake/source/Core/Src/: main.cpp
blinky_cmake/source/RTE/_Target_1/: Pre_Include_Global.h  RTE_Components.h
blinky_cmake/source/newlib/source/: _exit.c
blinky_cmake/toolchain/: arm_gcc_toolchain.cmake  armclang_toolchain.cmake  stm32f4_disco.cmake
blinky_cmake_armclang/: gen_build.sh
blinky_cmake_gnu_stm32cube/: CMakeLists.txt  README.md
blinky_cmake_gnu_stm32cube/doc/: startup_stm32.plantuml
blinky_cmake_gnu_stm32cube/source/: STM32F401VCTX_FLASH.ld
blinky_cmake_gnu_stm32cube/source/Core/Inc/: error_handler.h  gpio.h  main.h  stm32f401C_disco_board_define.h  stm32f4xx_it.h
blinky_cmake_gnu_stm32cube/source/Core/Src/: gpio.c  i2s.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
(+248 files in other folders)
